fixed marquee overflow

--- a/css/style.css
+++ b/css/style.css
@@ -275,10 +275,9 @@ div .text {
     color: #fff;
     font-size: 1.25rem;
 }
-
 .content {
     width: 100%;
-    line-height: 3rem;
+    line-height: 2.25rem;
 }
 
 .content ul {
